FlightPath 6.x Changelog
========================

2021-05-04
  Added fields to groups and group_requirements tables (incl. draft_) to facilitate public notes in groups,
  as well as "attributes" on a per-requirement level.
  
  Changed popup description to use fp_alert() function, with base64 encoding so we don't have to worry
  about trouble characters, and can enter HTML as well.
  

2021-04-21
  Made it simpler to define "unavailable days" for scheduling appointments.
  
  Fixed unavailable times table to look cleaner and easier to understand.

2021-04-20
  Making sure we log incorrect login attempts.
  

2021-04-06
  Fixing up blank degrees module, make it show if user has permission.
  
  Added masquerade module to core, permits searching by partial email and lastname now.
  

2021-04-05
  Making new degrees "allow dynamic" by default.
  
  Removing outdated settings variables.
  
  Documentation for content module.  Fleshed out the basic page content type as well.
  

2021-03-14
  Removing "blocks" module from Core.
  
  Adding various modules to core.
  

2021-02-20
  Added the base_url to the server name when sending mysql errors via email.

2020-10-07
	Initial commit of 6.x branch.  There are about to be various changes to FlightPath, which warrants 
	a new major version.