@@ -18,6 +18,7 @@ class Course extends stdClass
   public $bool_placeholder, $db, $db_substitution_id_array, $db_unassign_transfer_id;
   public $db_exclude, $data_entry_comment, $array_index, $data_entry_value, $db_group_attributes;
   public $db_group_requirement_id;  // the id from the group_requirements table where this was specified.
+  public $db_degree_requirement_id;  // the id from the group_requirements table where this was specified.
 
   // Course catalog data related:
   public $subject_id, $course_num, $course_id, $requirement_type, $catalog_year;
