@@ -1,6 +1,11 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-05-05
+  In the school settings form, you may now choose to sort courses in degrees and groups not by alphabetical, but by the order
+  in which they were entered.
+
+
 2021-05-04
   Added fields to groups and group_requirements tables (incl. draft_) to facilitate public notes in groups,
   as well as "attributes" on a per-requirement level.
